# Brazilian_TTS

./: .gitignore  pyproject.toml
backend/: settings.py  urls.py  views.py
voice/: admin.py  apps.py  models.py  serializer.py  textsplitter.py  urls.py  views.py
